<resources>
    <string name="app_name">Selge-bil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_misCarros">Mis carros</string>
    <string name="menu_venderCarro">Vender carro</string>
    <string name="menu_vendidos">Vendidos</string>
    <string name="menu_manual">Manual de usuario</string>
    <string name="datos">Datos</string>

    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="misCarros">Mis carros</string>
    <string name="venderCarro">Vender carro</string>
    <string name="vendidos">Vendidos</string>
    <string name="manual">Manual de usuario</string>
    <string name="eliminarActualizarCarro">Eliminar/Actualizar carro</string>

    <string name="modelo">Modelo</string>
    <string name="precio">Precio</string>
    <string name="traccion">Tracción</string>
    <string name="kilometraje">Kilometraje</string>
    <string name="marca">Marca</string>
    <string name="ubicacion">Ubicación</string>
    <string name="transmision">Transmisión</string>
    <string name="tipoCarro">Tipo de carro</string>
    <string name="anio">Año</string>
    <string name="combustible">Combustible</string>
    <string name="noPasajeros">Número de pasajeros</string>
    <string name="agregar">Agregar</string>
    <string name="limpiar">Limpiar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>

    <string name="comprador">Comprador:</string>
    <string name="nombreComprador">Nombre del comprador</string>
    <string name="correoComprador">Correo del comprador</string>
    <string name="telefonoComprador">Teléfono del comprador</string>
    <string name="direccionComprador">Dirección del comprador</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>