<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:elevation="90dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="12dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iV_foto_misCarros"
                        android:layout_width="150dp"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="215dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tV_modelo_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modelo"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_precio_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/precio"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_traccion_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/traccion"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_kilometraje_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/kilometraje"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_marca_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/marca"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_transmision_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/transmision"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_tipoCarros_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tipoCarro"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_anio_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/anio"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_combustible_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/combustible"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_noPasajeros_misCarros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/noPasajeros"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map_misCarros"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    map:liteMode="true" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>