<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:elevation="90dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="12dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iV_foto_carrosVendidos"
                        android:layout_width="150dp"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="215dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tV_modelo_carrosVenidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modelo"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_precio_carrosVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/precio"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_traccion_carrosVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/traccion"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_kilometraje_carrosVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/kilometraje"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_marca_carrosVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/marca"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_transmision_carrosVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/transmision"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_tipoCarros_carrosVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tipoCarro"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_anio_carrosVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/anio"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_combustible_carrosVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/combustible"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_noPasajeros_carrosVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/noPasajeros"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/comprador"
                    android:textColor="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/colorPrimaryDark"
                        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                    <TextView
                        android:id="@+id/tV_nombreComprador_carrosVendidos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/nombreComprador"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/colorPrimaryDark"
                        app:srcCompat="@drawable/ic_baseline_email_24" />

                    <TextView
                        android:id="@+id/tV_correoComprador_carrosVendidos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/correoComprador"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/colorPrimaryDark"
                        app:srcCompat="@drawable/ic_baseline_local_phone_24" />

                    <TextView
                        android:id="@+id/tV_telefonoComprador_carrosVendidos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/telefonoComprador"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/colorPrimaryDark"
                        app:srcCompat="@drawable/ic_baseline_home_24" />

                    <TextView
                        android:id="@+id/tV_direccionComprador_carrosVendidos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/direccionComprador"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>