<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:elevation="90dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="12dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_home_buyer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Detalles de auto"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iV_foto_misCarros_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyDatosMiCarro_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="214dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tV_modelo_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modelo"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_precio_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/precio"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_traccion_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/traccion"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_kilometraje_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/kilometraje"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_marca_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/marca"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tV_transmision_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/transmision"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_tipoCarros_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tipoCarro"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_anio_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/anio"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_combustible_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/combustible"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tV_noPasajeros_misCarros_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/noPasajeros"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Ubicacion"
                    android:textSize="15sp" />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map_misCarros_details"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    map:liteMode="true" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Vendedor"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iV_foto_comprador_details"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="vendedor_details"
                    app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Nombre y apellido" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iV_foto_telefono_details"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="vendedor_details"
                    app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="1234567890" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iV_foto_correo_details"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="vendedor_details"
                    app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="example@example.com" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="140dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBuy_carroDetalles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="comprar"/>
                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Regresar"
                    android:onClick="back"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>